added urdu statistics

--- a/settings/urdu.yaml
+++ b/settings/urdu.yaml
@@ -22,7 +22,7 @@ rules:
   '-': ' '
   '- o -': \N{ARABIC LETTER WAW}
   "----": \N{ARABIC FULL STOP}\N{ARABIC FULL STOP}
-  -e <wb>: ''
+  -e <wb>: \N{ARABIC KASRA}
   <nc_long_vowel> -e <wb>: \N{ARABIC LETTER YEH BARREE}
   .r: \N{ARABIC LETTER REH}
   .s: \N{ARABIC LETTER SAD}
